finishing up the contact page

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -25,12 +25,18 @@
     <div class="main">
         <div class="left">
             <div class="aboutus"> <h2> About us</h2>
-                <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
-                <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
-                <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
-                <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
-                <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
-                <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
+                <p>Step into any <b>ROCKEY BURGERS</b>, and you’ll notice we’re different. From our famous (free) house-made pickles, to the hand-painted signage, to our cheerful staff, we build our restaurants like we build our burgers–sustainably, locally, and with an unwavering commitment to quality.</p>
+                <p>Fresh, quality produce, meat, dairy and buns, sourced from partners located just miles from our restaurants, are the ingredients to making the perfect burger. This commitment to creating the best possible food for our guests is a direct reflection of our promise of creating fast food burgers using slow food values.</p>
+                <div class="poem">
+                    <p class="red">Bite into any Super burger, and taste the difference. Our burgers, fries, and shakes
+                    are made with the finest, freshest ingredients available.</p>
+                </div>
+                <p>All our beef is Rockey Farms, humanely-raised, vegetarian-fed, ground fresh daily, and sourced from a family-owned ranch.</p>
+                <p>All of our shakes and cones are made with organic cream from
+                    Rockey Creamery, a small, family-owned, organic farm located South of Nephi, Utah.</p>
+                <p>Our buns are baked to our specification by an artisan baker in Nephi, UT</p>
+                <p>The potatoes we use to make our French fries are made from
+                    potatoes grown in North America by growers who are required to identify the genetic source of their seed potatoes. We do not work with genetically modified potato varieties. Our potatoes are processed fresh off the field and delivered to us without any modifications. We proudly serve Sir Kensington ketchup.</p>
             </div>
             <div class="reasons">
                 <h2> Reasons You'll Like us</h2>
@@ -93,8 +99,8 @@
     </div>
 </body>
 <footer>
-   <a href="#"><i id="instagram" class="fab fa-instagram"></i></a>
-    <a href="#"><i id="facebook" class="fab fa-facebook"></i></a>
-    <a href="#"><i id="twitter" class="fab fa-twitter"></i></a>
+   <a href="http://www.instagram.com/keyburgers"><i id="instagram" class="fab fa-instagram"></i></a>
+    <a href="http://www.facebook.com/keyburgers"><i id="facebook" class="fab fa-facebook"></i></a>
+    <a href="http://www.twitter.com/keyburgers"><i id="twitter" class="fab fa-twitter"></i></a>
 </footer>
 </html>
