--- a/pages/html/menu.html
+++ b/pages/html/menu.html
@@ -22,55 +22,24 @@
     </div>
     <div class="burgerimg"></div>
     <div class="container">
-        <div class="menu">
-            <div class="burgers">
-                <ul>
-                    <li id="burgers">Burgers
-                        <ul>
-                            <li>Rockey Burger Deluxe</li>
-                            <li>Double Rockey Burger Deluxe</li>
-                            <li>Barbecue Burger</li>
-                            <li>Rock Your Socks Off Burger</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="sides">
-                <ul>
-                    <li id="sides">Sides
-                        <ul>
-                            <li>French Fries</li>
-                            <li>Sweet Potato Fries</li>
-                            <li>Cheese Fries</li>
-                            <li>Tater Tots</li>
-                            <li>Salad</li>
-                            <li>Soup</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="drinks">
-                <ul>
-                    <li id="drinks">Drinks
-                        <ul>
-                            <li>Water</li>
-                            <li>Coke</li>
-                            <li>Sprite</li>
-                            <li>Root Beer</li>
-                            <li>Mountain Dew</li>
-                            <li>Monster</li>
-                            <li>Bang</li>
-                            <li>RedBull</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+        <div class="menu">Menu</div>
+        <div class="parallax1">
+            <div class="title">Burgers</div>
         </div>
+        <div class="burgers">nsdnfl faoskdngsksdfk <br> dksdf <br>skdfjaslg sadfjaskj</div>
+        <div class="parallax2">
+            <div class="title">Sides</div>
+        </div>
+        <div class="sides">flsjdflka jskdfjsalk <br> skdfjksf <br></div>
+        <div class="parallax3">
+            <div class="title">Drinks</div>
+        </div>
+        <div class="drinks"></div>
     </div>
 </body>
 <footer>
-    <a href="#"><i id="instagram" class="fab fa-instagram"></i></a>
-    <a href="#"><i id="facebook" class="fab fa-facebook"></i></a>
-    <a href="#"><i id="twitter" class="fab fa-twitter"></i></a>
+    <a href="http://www.instagram.com/keyburgers"><i id="instagram" class="fab fa-instagram"></i></a>
+    <a href="http://www.facebook.com/keyburgers"><i id="facebook" class="fab fa-facebook"></i></a>
+    <a href="http://www.twitter.com/keyburgers"><i id="twitter" class="fab fa-twitter"></i></a>
 </footer>
 </html>
