--- a/pages/html/contact.html
+++ b/pages/html/contact.html
@@ -22,16 +22,13 @@
     </div>
     <div class="burgerimg"></div>
     <div class="container">
-        <div class="contactLayout">
-            <form method="post">
-                <h2>Contact Us</h2>
+        <div class="holder">
+            <div class="subscribe">
+                <h2>Subscribe Today</h2>
+                <h4>Don't Miss Out on Discounts!</h4>
                 <div>
-                    <label for="firstName">First Name:</label>
-                    <input type="text" id="firstName" name="firstName">
-                </div>
-                <div>
-                    <label for="lastName">Last Name:</label>
-                    <input type="text" id="lastName" name="lastName">
+                    <label for="fullname">Full Name:</label>
+                    <input type="text" id="fullname" name="fullname">
                 </div>
                 <div>
                     <label for="email">Email:</label>
@@ -41,36 +38,254 @@
                     <label for="phone">Phone Number:</label>
                     <input type="number" id="phone" name="phone">
                 </div>
-                <p>How would you like us to contact you?</p>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="radio" id="contactemail" name="contact-preference">
-                </div>
-                <div>
-                    <label for="phone">Phone</label>
-                    <input type="radio" id="contactphone" name="contact-preference">
-                </div>
-                <div>
-                    <label for="about">Message to Us</label>
-                    <textarea id="about" name="about>">Please be Descriptive</textarea>
-                </div>
-                <div>
-                    <input type="reset" id="reset" value="reset">
-                    <input type="submit" id="submit" value="Submit">
-                </div>
-            </form>
+            </div>
+            <div class="mapcontatiner">
+            <div class="map">
+                <h2>Find us Here:</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194956.15567216597!2d-111.78547645059668!3d40.22707905360982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf22538e65428cabd!2sMountainland%20Technical%20College%3A%20Orem%20Campus!5e0!3m2!1sen!2sus!4v1568049419126!5m2!1sen!2sus" allowfullscreen=""></iframe>
+            </div>
         </div>
-       <div class="mapcontatiner">
-          <div class="map">
-              <h2>Find us Here:</h2>
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194956.15567216597!2d-111.78547645059668!3d40.22707905360982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf22538e65428cabd!2sMountainland%20Technical%20College%3A%20Orem%20Campus!5e0!3m2!1sen!2sus!4v1568049419126!5m2!1sen!2sus" allowfullscreen=""></iframe>
-          </div>
-       </div>
+            <div class="locations">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Downtown Salt Lake City</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>346 Kearns Street, </td>
+                    </tr>
+                    <tr>
+                        <td>Salt Lake City, UT 84111
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Mon – Fri 11am to 8pm </td>
+                    </tr>
+                    <tr>
+                        <td>Sat 10am to 8pm</td>
+                    </tr>
+                    <tr>
+                        <td>Closed Sundays
+                        </td>
+                    </tr><tr>
+                        <td>801-677-0070 </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Sandy</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>346 Murray Lane, </td>
+                    </tr>
+                    <tr>
+                        <td>Sandy, UT 84093</td>
+                    </tr>
+                    <tr>
+                        <td>Mon – Fri 11am to 8pm </td>
+                    </tr>
+                    <tr>
+                        <td>Sat 10am to 8pm</td>
+                    </tr>
+                    <tr>
+                        <td>Closed Sundays
+                        </td>
+                    </tr><tr>
+                        <td>801-677-0070 </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Lehi</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>1205 Cabela Drive, </td>
+                    </tr>
+                    <tr>
+                        <td>Lehi, Ut 8403
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Mon – Fri 11am to 8pm </td>
+                    </tr>
+                    <tr>
+                        <td>Sat 10am to 8pm</td>
+                    </tr>
+                    <tr>
+                        <td>Closed Sundays
+                        </td>
+                    </tr><tr>
+                        <td>801-677-0070 </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Provo</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>841 N University Ave, </td>
+                    </tr>
+                    <tr>
+                        <td>Provo, UT 84604
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Mon – Fri 11am to 8pm </td>
+                    </tr>
+                    <tr>
+                        <td>Sat 10am to 8pm</td>
+                    </tr>
+                    <tr>
+                        <td>Closed Sundays
+                        </td>
+                    </tr><tr>
+                        <td>801-677-0070 </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="jobs">
+            <h2>Jobs</h2>
+            <h4>Join our Great Team!</h4>
+            <div>
+                <label for="firstname">First Name:</label>
+                <input type="text" id="firstname" name="firstname">
+            </div>
+            <div>
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address">
+            </div>
+            <div>
+                <label for="address2">Address Line 2:</label>
+                <input type="text" id="address2" name="address2">
+            </div>
+            <div>
+                <label for="city">City:</label>
+                <input type="text" id="city" name="city">
+            </div>
+            <div>
+                <label for="state">State:</label>
+                <select id="state">
+                    <option value="select">Select</option>
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District Of Columbia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
+                </select>
+            </div>
+            <div>
+                <label for="zipcode">Zip Code:</label>
+                <input type="text" id="zipcode" name="zipcode">
+            </div>
+            <div>
+                <label for="phonenumber">Phone Number:</label>
+                <input type="text" id="phonenumber" name="phonenumber">
+            </div>
+            <div>
+                <label for="emailadd">Email:</label>
+                <input type="email" id="emailadd" name="emailadd">
+            </div>
+            <div class="workhist">
+                <h2>Work History</h2>
+                <div>
+                    <label for="what">Tell us about your last two jobs. What did you do? Who did you work for? How long
+                        were you there?:</label>
+                    <textarea id="what" name="what">Job 1: </textarea>
+                    <textarea id="what" name="what">Job 2:</textarea>
+                </div>
+            </div>
+            <div class="availability">
+                <h2>Availability</h2>
+                <div>
+                    <label for="daytime">Daytime:</label>
+                    <input type="checkbox" id="daytime" name="daytime" value="daytime">
+                </div>
+                <div>
+                    <label for="evenings">Evenings:</label>
+                    <input type="checkbox" id="evenings" name="evenings" value="evenings">
+                </div>
+                <div>
+                    <label for="anytime">Anytime:</label>
+                    <input type="checkbox" id="anytime" name="anytime" value="anytime">
+                </div>
+            </div>
+            <div class="greatfit">
+                <h2>What makes you a great fit?</h2>
+                <label for="why"></label>
+                <textarea id="why">Be Descriptive</textarea>
+            </div>
+            <div>
+                <input type="reset" id="reset" value="reset">
+                <input type="submit" id="submit" value="Submit">
+            </div>
+        </div>
     </div>
 </body>
 <footer>
-    <a href="#"><i id="instagram" class="fab fa-instagram"></i></a>
-    <a href="#"><i id="facebook" class="fab fa-facebook"></i></a>
-    <a href="#"><i id="twitter" class="fab fa-twitter"></i></a>
+    <a href="http://www.instagram.com/keyburgers"><i id="instagram" class="fab fa-instagram"></i></a>
+    <a href="http://www.facebook.com/keyburgers"><i id="facebook" class="fab fa-facebook"></i></a>
+    <a href="http://www.twitter.com/keyburgers"><i id="twitter" class="fab fa-twitter"></i></a>
 </footer>
 </html>
