--- a/pages/html/contact.html
+++ b/pages/html/contact.html
@@ -250,8 +250,7 @@
             <div class="workhist">
                 <h2>Work History</h2>
                 <div>
-                    <label for="what">Tell us about your last two jobs. What did you do? Who did you work for? How long
-                        were you there?:</label>
+                    <label for="what">Tell us about your last two jobs. What did you do? Who did you work for? How long were you there?:</label>
                     <textarea id="what" name="what">Job 1: </textarea>
                     <textarea id="what" name="what">Job 2:</textarea>
                 </div>
@@ -282,9 +281,26 @@
             </div>
         </div>
     </div>
+    <div class="faq">
+        <div class="expensive">
+            <button onclick="myFunction()">Why is your Rockey Burger So Expensive?</button>
+            <div id="whysoexpensive">
+                <p>We focus on making meals with the best and freshest ingredients, like humanely-raised beef that is ground fresh each day, organic chicken, and Rockey Family Dairy’s organic cream for our ice cream cones, sundaes and shakes.</p>
+                <p> Our commitment to freshness and quality means higher prices than you’d find at traditional fast-food burger chains. It also means food that tastes way better — because, well, it is.</p>
+            </div>
+        </div>
+        <div class="where">
+            <button onclick="myFunction2()">Where does your beef come from?</button>
+            <div id="comesfrom">
+                <p>We source our humanely-raised, vegetarian-fed beef from local, family-owned ranches. We use an 85% to 15% protein to fat blend, a mixture of the lean protein and the marbling found on in a cut of steak for our ground beef. The mixture is ground daily, and thus, our burgers taste so amazing.</p>
+            </div>
+        </div>
+
+    </div>
+
+    <script src="../javascript.js" rel="script"></script>
 </body>
 <footer>
-    <a href="http://www.instagram.com/keyburgers"><i id="instagram" class="fab fa-instagram"></i></a>
     <a href="http://www.facebook.com/keyburgers"><i id="facebook" class="fab fa-facebook"></i></a>
     <a href="http://www.twitter.com/keyburgers"><i id="twitter" class="fab fa-twitter"></i></a>
 </footer>
