--- a/pages/html/menu.html
+++ b/pages/html/menu.html
@@ -22,23 +22,129 @@
     </div>
     <div class="burgerimg"></div>
     <div class="container">
-        <div class="menu">Menu</div>
-        <div class="parallax1">
-            <div class="title">Burgers</div>
+        <div class="left">
+            <div class="menu">
+                <div>Menu</div>
+                <div class="subtitle">Our burgers are cooked medium and are very juicy!</div>
+            </div>
+            <div class="parallax1">
+                <div class="burgsand">Burgers and Sandwiches</div>
+            </div>
+            <div class="burgers">
+                <div>
+                    <h2>Rockey Burger</h2>
+                    <ul>
+                        <li>$8.25 Two 4 oz. patties, with Awesome Sauce</li>
+                        <li>Add Cheese ... $0.75</li>
+                        <li>Add Bacon ... $1.25</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Super Burger</h2>
+                    <ul>
+                        <li>$5.75 4 oz. patties, with Awesome Sauce</li>
+                        <li>Add Cheese ... $0.75</li>
+                        <li>Add Bacon ... $1.25</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Chicken Sandwich</h2>
+                    <ul>
+                        <li>$8.00</li>
+                        <li>Add Jack Cheese ... $0.50 </li>
+                        <li>Add Bacon ... $1.25</li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Extras</h2>
+                    <ul>
+                        <li>Avocado $1.25 </li>
+                        <li>Bacon $1.25</li>
+                        <li>Roasted Portabello $1.25</li>
+                        <li>Organic Egg $1.50</li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="parallax2">
+                <div class="title">Sides</div>
+            </div>
+            <div class="sides">
+                <div>
+                    <h2>Fries</h2>
+                    <ul>
+                        <li><b>French Fries</b> $2.75 </li>
+                        <li><b>Garlic Fries</b> $3.50 </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Sauces</h2>
+                    <ul>
+                        <li>$1.50 Super Sauce, Housemade Mayo, Chipotle</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="parallax3">
+                <div class="title">Drinks</div>
+            </div>
+            <div class="drinks">
+                <div>
+                    <h2>Quench Your Thirst with a(n)...</h2>
+                    <ul>
+                        <li>Fountain Drink (coke products)... $2.50 </li>
+                        <li>Organic Iced Tea ... $2.75</li>
+                        <li>Fresh Lemonade ... $3.25 </li>
+                        <li>Water Bottle ... $2.00</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="parallax4">
+                <div class="title">Desserts</div>
+            </div>
+            <div class="desserts">
+                <div>
+                    <h2>Cones</h2>
+                    <p>Rockey Creamery Organic Soft Serve ice cream</p>
+                    <ul>
+                        <li>Regular ... $3.75
+                        <ul>
+                            <li>Vanilla, Chocolate, or Swirled</li>
+                        </ul>
+                        </li>
+                        <li>Dipped Cone ... $4.50
+                            <ul>
+                                <li>Vanilla ice cream, dipped in chocolate</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Shakes</h2>
+                    <p>Make with Rockey Creamery Organic Soft Serve</p>
+                    <ul>
+                        <li>Regular ... $4.75
+                            <ul>
+                                <li>Vanilla, Chocolate, or Swirled</li>
+                            </ul>
+                        </li>
+                        <li>Super Shake ... $5.75
+                            <ul>
+                                <li>Cookies & Cream, Fresh Strawberries, or Chocolate & Chips</li>
+                            </ul>
+                        </li>
+                        <li>Kids Size ... $3.25
+                        <ul>
+                            <li>Vanilla, Chocolate, or Swirled Add Malt ... $0.50 </li>
+                        </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="burgers">nsdnfl faoskdngsksdfk <br> dksdf <br>skdfjaslg sadfjaskj</div>
-        <div class="parallax2">
-            <div class="title">Sides</div>
-        </div>
-        <div class="sides">flsjdflka jskdfjsalk <br> skdfjksf <br></div>
-        <div class="parallax3">
-            <div class="title">Drinks</div>
-        </div>
-        <div class="drinks"></div>
+        <div class="right">fajslkdgj alskfjsa glskjf</div>
     </div>
 </body>
 <footer>
-    <a href="http://www.instagram.com/keyburgers"><i id="instagram" class="fab fa-instagram"></i></a>
     <a href="http://www.facebook.com/keyburgers"><i id="facebook" class="fab fa-facebook"></i></a>
     <a href="http://www.twitter.com/keyburgers"><i id="twitter" class="fab fa-twitter"></i></a>
 </footer>
