Finshed with project. Added Onclick to menu page.

--- a/pages/html/menu.html
+++ b/pages/html/menu.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
     <link href="../css/rockey_burgers_menu.css" rel="stylesheet" type="text/css">
     <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
+    <script src="../javascript.js"></script>
 </head>
 <body>
     <div class="header">
@@ -141,7 +142,24 @@
                 </div>
             </div>
         </div>
-        <div class="right">fajslkdgj alskfjsa glskjf</div>
+        <div class="right">
+            <div class="FAQ">
+                <h2>FAQ</h2>
+                <div class="Q1">
+                    <h4 onclick="myFunction()">Why is your Rockey Burger So Expensive?</h4>
+                    <div id="q1hideshow" style="display: none">
+                        <p>We focus on making meals with the best and freshest ingredients, like humanely-raised beef that is ground fresh each day, organic chicken, and Rockey Family Dairy’s organic cream for our ice cream cones, sundaes and shakes.</p>
+                        <p>Our commitment to freshness and quality means higher prices than you’d find at traditional fast-food burger chains. It also means food that tastes way better — because, well, it is.</p>
+                    </div>
+                </div>
+                <div class="Q2">
+                    <h4 onclick="myFunction2()">Where does your beef come from?</h4>
+                    <div id="q2hideshow" style="display: none">
+                        <p>We source our humanely-raised, vegetarian-fed beef from local, family-owned ranches. We use an 85% to 15% protein to fat blend, a mixture of the lean protein and the marbling found on in a cut of steak for our ground beef. The mixture is ground daily, and thus, our burgers taste so amazing.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <footer>
