--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Rockey Burgers</title>
     <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
-    <link href="../css/rockey_burgers_index.css" rel="stylesheet" type="text/css">
-    <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
+    <link href="css/rockey_burgers_index.css" rel="stylesheet" type="text/css">
+    <link href="css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
             <div id="myDIV">
-                <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
+                <a href="index.html"><img src="images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
             </div>
            <div class="navbox">
                <a href="index.html"><button class="btn active">Home</button></a>
